[package]
name = "slog-unwrap"
version = "0.1.5"
authors = ["Andre Braga Reis <andre@brg.rs>"]
edition = "2018"
description = "Extension traits for logging failed unwraps to a slog::Logger."
license = "Apache-2.0/MIT"
repository = "https://github.com/abreis/slog-unwrap"
documentation = "https://docs.rs/slog-unwrap"
keywords = ["log", "logging", "slog"]
categories = ["development-tools::debugging"]
readme = "README.md"

[features]
default = ["panic-quiet"]
# Makes failed unwraps panic with an empty message.
panic-quiet = []
# Adds support for `slog-scope`, which removes the need to pass a `slog::Logger`
# to the various methods.
scope = ["slog-scope"]

[dependencies]
slog = "2.5"
slog-scope = {version = "4.3", optional = true }
